// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main should support js output format for additionalProperties errors 1`] = `
Array [
  Object {
    "error": "Property \`baz\` is not expected to be here",
    "path": "",
  },
]
`;

exports[`Main should support js output format for default errors 1`] = `
Array [
  Object {
    "error": "\`id\` property type should be number",
    "path": "/id",
  },
]
`;

exports[`Main should support js output format for enum errors 1`] = `
Array [
  Object {
    "error": "\`id\` property should be equal to one of the allowed values: \`foo\`, \`bar\`",
    "path": "/id",
    "suggestion": "Did you mean \`bar\`?",
  },
]
`;

exports[`Main should support js output format for required errors 1`] = `
Array [
  Object {
    "error": "\`nested\` property should have required property \`id\`",
    "path": "/nested",
  },
]
`;
